Highlighting, formatting, inlays and intentions